--- a/app/package.json
+++ b/app/package.json
@@ -15,9 +15,10 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@supabase/supabase-js": "^2.93.3",
     "expo": "~54.0.25",
     "expo-checkbox": "~5.0.7",
-    "expo-constants": "~18.0.10",
+    "expo-constants": "~18.0.13",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
