--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
     "test": "jest"
   },
   "dependencies": {
@@ -43,10 +45,15 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
-    "eslint": "^9.25.0",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
+    "eslint": "^9.39.3",
     "eslint-config-expo": "~10.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
     "jest": "^29.7.0",
     "jest-expo": "^54.0.17",
+    "prettier": "^3.8.1",
     "typescript": "~5.9.2"
   },
   "private": true
