Adding eslint to GitHub workflows

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -10,6 +10,10 @@ jobs:
     name: Run ESLint
     runs-on: ubuntu-latest
 
+    defaults:
+      run: 
+        working-directory: app
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
